--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Practical</h1>
     <p>biology practical joma dite hobe</p>
     <p>ami akta sobi akaisi</p>
+    <img src="photo.png" alt="">
 </body>
 </html>
