--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practice1 repo website</title>
+    <link rel="stylesheet" href="practical.css">
 </head>
 <body>
     <h1>Practical</h1>
